[package]
name = "solana-dao-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
anyhow = "1.0"
spl-token = "6.0"
spl-associated-token-account = "4.0"
borsh = "1.5.7"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
